[package]
name = "age-keygen-deterministic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "5.0.1"
rust-argon2 = "0.8"
bech32 = "0.8.1"
structopt = { version = "0.3", default-features = false }
sha2 = "0.10.1"
hmac = "0.12.0"
